--- a/.github/workflows/job-ci-publishamd64-oci.yml
+++ b/.github/workflows/job-ci-publishamd64-oci.yml
@@ -61,10 +61,11 @@ jobs:
           sudo mkdir -p ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           sudo chmod 777 ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
-      - name: Download a single artifact
+      - name: Download dist amd64
         uses: actions/download-artifact@v4
         with:
           name: dist_amd64
+          run-id: ${{ github.event.workflow_run.id }}
       - name: Login into registry
         run: echo ${DOCKERHUB_PASSWORD} | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
       - name: Test
