--- a/.github/workflows/job-ci-publishmanifest-oci.yml
+++ b/.github/workflows/job-ci-publishmanifest-oci.yml
@@ -80,15 +80,13 @@ jobs:
         run: |
           docker load --input ${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar
           docker tag ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64 ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64
-          docker load --input ${REPO_SLUG}-${RELEASE_VERSION}-arm64.tar
-          docker tag ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64 ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64
-          docker tag ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64 ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
+          docker load --input ${REPO_SLUG}-${RELEASE_VERSION}-arm64v8.tar
+          docker tag ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8 ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
           docker manifest create ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION} --amend ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64 --amend ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
           docker manifest push ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}
           rm -rf ${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar
-          rm -rf ${REPO_SLUG}-${RELEASE_VERSION}-arm64.tar
+          rm -rf ${REPO_SLUG}-${RELEASE_VERSION}-arm64v8.tar
           docker image rm ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64
-          docker image rm ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64
           docker image rm ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
           cowsay -f dragon "Well Done! OCI container image is now on your registry."
       - name: Purge Job Cache
