--- a/.github/workflows/job-ci-publisharm64-oci.yml
+++ b/.github/workflows/job-ci-publisharm64-oci.yml
@@ -73,7 +73,7 @@ jobs:
           ls -la
       - name: Publish OCI
         run: |
-          docker load --input ${REPO_SLUG}-${RELEASE_VERSION}-arm64.tar
+          docker load --input ${REPO_SLUG}-${RELEASE_VERSION}-arm64v8.tar
           docker tag ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8 ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
           docker push ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-arm64v8
           rm -rf ${REPO_SLUG}-${RELEASE_VERSION}-arm64v8.tar
