--- a/.github/workflows/job-ci-buildamd64-global.yml
+++ b/.github/workflows/job-ci-buildamd64-global.yml
@@ -76,6 +76,15 @@ jobs:
           ls -la ${COMMON_CONTAINER_STAGING_PATH}/dist_amd64
           ls -la
           cowsay -f tux "Build Success"
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: '${{ inputs.DOCKERHUB_PRIVATE_NAMESPACE }}/${{ inputs.REPO_SLUG }}:${{ inputs.RELEASE_VERSION }}-amd64'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
       - uses: actions/upload-artifact@v4
         with:
           name: dist_amd64
