Core: test pipeline - ecommerce

--- a/.github/workflows/core-ci-ecommerce-void.yml
+++ b/.github/workflows/core-ci-ecommerce-void.yml
@@ -137,7 +137,7 @@ jobs:
       RELEASE_VERSION: ${{ needs.vars.outputs.RELEASE_VERSION }}
       DOCKERHUB_PRIVATE_NAMESPACE: ${{ vars.DOCKERHUB_PRIVATE_NAMESPACE }}
       DOCKERHUB_NAMESPACE: ${{ vars.DOCKERHUB_NAMESPACE }}
-      MONOREPO_BUSINESS_DOMAIN: ${{ needs.vars.outputs.MONOREPO_BUSINESS_DOMAIN }}
+      MONOREPO_BUSINESS_DOMAIN: "IaC"
       WOPR_NAMESPACE: ${{ needs.vars.outputs.WOPR_NAMESPACE }}
 
 ###
