IaC: Added xpipe-desk

--- a/CMDB/cmdbuild-demo/.env
+++ b/CMDB/cmdbuild-demo/.env
@@ -22,7 +22,7 @@ APP_IP_ADDRESS=172.16.220.4
 APP_DB_IP_ADDRESS=172.16.220.204
 
 # Database Configuration
-APP_DB_DATABASE=app
+APP_DB_DATABASE=cmdb
 APP_DB_SCHEMA=
 APP_DB_ROOT_PASSWORD=secret
 APP_DB_USERNAME=user
