--- a/IaC/xpipe-sindria/xpipe-desk/ingress.yaml
+++ b/IaC/xpipe-sindria/xpipe-desk/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: xpipe-tracker
+  name: xpipe-desk
   namespace: xpipe-sindria
   labels:
-    app: xpipe-tracker
+    app: xpipe-desk
   #annotations:
   #  nginx.ingress.kubernetes.io/proxy-body-size: "8g"
   #  nginx.org/client-max-body-size: "8g"
@@ -12,17 +12,17 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: sindria-tracker-xpipe.sindria.org
+  - host: sindria-desk-xpipe.sindria.org
     http:
       paths:
         -  path: /
            pathType: Prefix
            backend:
             service:
-              name: xpipe-tracker
+              name: xpipe-desk
               port:
-                number: 80
+                number: 8080
   tls:
   - hosts:
-    - sindria-tracker-xpipe.sindria.org
+    - sindria-desk-xpipe.sindria.org
     secretName: tls-sindriaorg
