--- a/IaC/xpipe-sindria/xpipe-desk/redis.yaml
+++ b/IaC/xpipe-sindria/xpipe-desk/redis.yaml
@@ -1,29 +1,26 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-tracker-db-config
+  name: xpipe-desk-redis-config
   namespace: xpipe-sindria
 data:
-  MYSQL_MAX_CONNECTIONS: "500"
+  REDIS_VERSION: "7.2.5-alpine"
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: xpipe-tracker-db-secret
+  name: xpipe-desk-redis-secret
   namespace: xpipe-sindria
 stringData:
-  MYSQL_ROOT_PASSWORD: "secret"
-  MYSQL_DATABASE: "app"
-  MYSQL_USER: "user"
-  MYSQL_PASSWORD: "secret"
+  REDIS_VERSION: "7.2.5-alpine"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: xpipe-tracker-db
-  name: xpipe-tracker-db-pvc
+    app: xpipe-desk-redis
+  name: xpipe-desk-redis-pvc
   namespace: xpipe-sindria
 #provisioner: kubernetes.io/aws-ebs
 spec:
@@ -38,15 +35,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: xpipe-tracker-db
-  name: xpipe-tracker-db
+    app: xpipe-desk-redis
+  name: xpipe-desk-redis
   namespace: xpipe-sindria
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: xpipe-tracker-db
+      app: xpipe-desk-redis
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -55,83 +52,70 @@ spec:
   template:
     metadata:
       labels:
-        app: xpipe-tracker-db
+        app: xpipe-desk-redis
     spec:
       initContainers:
         - name: init-lostfound
           image: busybox
-          command: [ "sh", "-c", "rm -Rf /var/lib/mysql/lost+found" ]
+          command: [ "sh", "-c", "rm -Rf /data/lost+found" ]
           volumeMounts:
-            - mountPath: /var/lib/mysql
-              name: xpipe-tracker-db-volume
+            - mountPath: /data
+              name: xpipe-desk-redis-volume
           resources:
             requests:
               cpu: 10m
               memory: 10Mi
-        #- name: init-mysqldata
-        #  image: mysql:8.3.0
-        #  command: [ "bash", "-c", "microdnf install rsync && rsync -ravP /var/lib/mysql/ /data/" ]
-        #  volumeMounts:
-        #    - mountPath: /data
-        #      name: xpipe-tracker-db-volume
-        #  resources:
-        #    requests:
-        #      cpu: 10m
-        #      memory: 10Mi
-        - name: init-mysql
+        - name: init-redis
           image: busybox
-          command: [ "sh", "-c", "chown -R 999:999 /var/lib/mysql" ]
+          command: [ "sh", "-c", "chown -R 999:1000 /data" ]
           volumeMounts:
-            - mountPath: /var/lib/mysql
-              name: xpipe-tracker-db-volume
+            - mountPath: /data
+              name: xpipe-desk-redis-volume
           resources:
             requests:
               cpu: 10m
               memory: 10Mi
       containers:
       - env:
-        - name: MYSQL_MAX_CONNECTIONS
+        - name: REDIS_VERSION
           valueFrom:
             configMapKeyRef:
-              key: MYSQL_MAX_CONNECTIONS
-              name: xpipe-tracker-db-config
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: MYSQL_ROOT_PASSWORD
-              name: xpipe-tracker-db-secret
-        - name: MYSQL_DATABASE
-          valueFrom:
-            secretKeyRef:
-              key: MYSQL_DATABASE
-              name: xpipe-tracker-db-secret
-        - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              key: MYSQL_USER
-              name: xpipe-tracker-db-secret
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: MYSQL_PASSWORD
-              name: xpipe-tracker-db-secret
-        image: mysql:8.0
+              key: REDIS_VERSION
+              name: xpipe-desk-redis-config
+#        - name: cluster.name
+#          valueFrom:
+#            configMapKeyRef:
+#              key: cluster.name
+#              name: xpipe-desk-redis-config
+#        - name: discovery.type
+#          valueFrom:
+#            configMapKeyRef:
+#              key: discovery.type
+#              name: xpipe-desk-redis-config
+#        - name: ELASTIC_PASSWORD
+#          valueFrom:
+#            secretKeyRef:
+#              key: ELASTIC_PASSWORD
+#              name: xpipe-desk-redis-secret
+        image: redis:7.2.5-alpine
         imagePullPolicy: IfNotPresent
+        #command: [ "memcached" ]
+        #args: [ "-m", "256M" ]
 #        livenessProbe:
 #          exec:
 #            command:
 #            - /bin/sh
 #            - -i
 #            - -c
-#            - mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
+#            -  mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
 #          failureThreshold: 3
 #          initialDelaySeconds: 30
 #          periodSeconds: 10
 #          successThreshold: 1
 #          timeoutSeconds: 1
-        name: xpipe-tracker-db
+        name: xpipe-desk-redis
         ports:
-        - containerPort: 3306
+        - containerPort: 6379
           protocol: TCP
 #        readinessProbe:
 #          exec:
@@ -153,31 +137,31 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: /var/lib/mysql
-          name: xpipe-tracker-db-volume
+        - mountPath: /data
+          name: xpipe-desk-redis-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: xpipe-tracker-db-volume
+      - name: xpipe-desk-redis-volume
         persistentVolumeClaim:
-          claimName: xpipe-tracker-db-pvc
+          claimName: xpipe-desk-redis-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-tracker-db
-  name: xpipe-tracker-db
+    app: xpipe-desk-redis
+  name: xpipe-desk-redis
   namespace: xpipe-sindria
 spec:
   ports:
-  - name: mysql
-    port: 3306
+  - name: redis
+    port: 6379
     protocol: TCP
-    targetPort: 3306
+    targetPort: 6379
   selector:
-    app: xpipe-tracker-db
+    app: xpipe-desk-redis
   sessionAffinity: None
   type: ClusterIP
