--- a/IaC/xpipe-sindria/xpipe-tracker/configmap.yaml
+++ b/IaC/xpipe-sindria/xpipe-tracker/configmap.yaml
@@ -4,10 +4,7 @@ metadata:
   name: xpipe-tracker-config
   namespace: xpipe-sindria
 data:
-  JVM_MINIMUM_MEMORY: "384m"
-  JVM_MAXIMUM_MEMORY: "768m"
-  JVM_RESERVED_CODE_CACHE_SIZE: "512m"
-  ATL_DB_DRIVER: "com.mysql.jdbc.Driver"
-  ATL_DB_TYPE: "mysql8"
-  ATL_DB_SCHEMA_NAME: "NONE"
-  ATL_PROXY_NAME: "sindria-tracker-xpipe.sindria.org"
+  OPENPROJECT_HOST__NAME: "sindria-tracker-xpipe.sindria.org"
+  OPENPROJECT_SECRET_KEY_BASE: "secret"
+  OPENPROJECT_HTTPS: "true"
+  OPENPROJECT_HSTS: "true"
