--- a/IaC/xpipe-sindria/xpipe-desk/deployment.yaml
+++ b/IaC/xpipe-sindria/xpipe-desk/deployment.yaml
@@ -154,7 +154,8 @@ spec:
               name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-railsserver" ]
+        command: ["/docker-entrypoint.sh"]
+        args: [ "zammad-railsserver" ]
         #securityContext:
         #  capabilities:
         #    add:
@@ -323,7 +324,8 @@ spec:
                 name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-backup" ]
+        command: [ "/docker-entrypoint.sh" ]
+        args: [ "zammad-backup" ]
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
         #securityContext:
@@ -496,7 +498,8 @@ spec:
                 name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-init" ]
+        command: [ "/docker-entrypoint.sh" ]
+        args: [ "zammad-init" ]
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
         #securityContext:
@@ -669,7 +672,8 @@ spec:
                 name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-nginx" ]
+        command: [ "/docker-entrypoint.sh" ]
+        args: [ "zammad-nginx" ]
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
         #securityContext:
@@ -842,7 +846,8 @@ spec:
                 name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-scheduler" ]
+        command: [ "/docker-entrypoint.sh" ]
+        args: [ "zammad-scheduler" ]
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
         #securityContext:
@@ -1015,7 +1020,8 @@ spec:
                 name: xpipe-desk-secret
         image: ghcr.io/zammad/zammad:6.3.1-95
         imagePullPolicy: Always
-        command: [ "zammad-websocket" ]
+        command: [ "/docker-entrypoint.sh" ]
+        args: [ "zammad-websocket" ]
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
         #securityContext:
